# Khuzzaim-s-Berlin-Rep-DL-Memory-

./: .flake8  .gitignore  CITATION.cff  MEMORIES.md  README.md  Untitled.ipynb  session-5-peaks.ipynb  session-5-peaks.py  session2.ipynb  session2.py  session3.ipynb  session3.py  session4.html  session4.ipynb  session4.py  session5.ipynb  session5.py  session5_peaks.ipynb  session5_peaks.py  session8.ipynb  session8.py  setup.cfg  spacemed.yml
.ipynb_checkpoints/: README-checkpoint.md  session5-checkpoint.ipynb  session5-checkpoint.py  session5_peaks-checkpoint.ipynb  session5_peaks-checkpoint.py
data/: Niederschlag_1981-2010.txt  Niederschlag_1981-2010_Stationsliste.txt  README.md  pulse_data.csv
doc/: session-1.md  session-2.md  session-3.md  session-4.md  session-6.md  session-8.md
doc/.ipynb_checkpoints/: session-5-checkpoint.md  session-7-checkpoint.md
notebooks/: Untitled.ipynb  session2.ipynb  session2.py  session3.py  session4.ipynb  session4.py  session6.ipynb  session6.py  session8.ipynb  session8.py
notebooks/.ipynb_checkpoints/: session6-checkpoint.ipynb  session6-checkpoint.py
session4_files/libs/bootstrap/: bootstrap-c1166c9d372bd5265ff2dd5a24c1f0b9.min.css
src/spacemed/: __init__.p  __init__.py  __version__.py  analysis.py  fmri.py  load_pulse.py  plot_fmri_slice.py  plot_heart_rate.py
src/spacemed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spacemed/.ipynb_checkpoints/: __init__-checkpoint.py  analysis-checkpoint.py  plot_heart_rate-checkpoint.py
tests/: test_analysis.py
tests/.ipynb_checkpoints/: test_analysis-checkpoint.py
