[metadata]
name = spacemed
version = attr: spacemed.__version__.__version__
author = Muhammad Khuzzaim Shakeel Khan
author_email = muhammad-khuzzaim-shakeel.khan@charite.de
url = https://git.bihealth.org/spacemed-digital-literacy/2026/personal/mukh11
description = Tools for SpaceMed Course
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    license .. OSI Approved .. GNU General Public License v3
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering 
    
[options]
package_dir =
    =src
packages = spacemed
zip_safe = True
include_package_data = True
install_requires =
    pandas
    scipy